<resources>
    <string name="app_name">rr1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO change all strings to the appropriate names-->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="rat_image">Rat image</string>
    <string name="Title">Rat Race</string>
    <string name="tag">Gotta get in the race!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="join">JOIN</string>
    <string name="joinRegister">Join Rat Race</string>
    <string name="passwordHintRegister">Password</string>
    <string name="resgisterButton">Join</string>
    <string name="emailHintRegister">Email</string>
    <string name="nameHintRegister">Name</string>
    <string name="confirmation_code">Confirmation Code</string>
</resources>